# astrophysics_toolset

./: .pre-commit-config.yaml  .pyup.yml  .travis.yml  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  Requirements.txt  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pytest.yml
astrophysics_toolset/: __init__.py  cli.py
astrophysics_toolset/io/: __init__.py  _disperse.ksy  _disperse.py  common.py  disperse.py  disperse_reader.py  grafic.py  yorick.py
astrophysics_toolset/io/tests/: test_io.py
astrophysics_toolset/ramses/: _convert_to_single_precision.f90  change_ncpu.py  convert_to_single_precision.py  double_to_single_precision.py  hilbert.c  hilbert.pxd  hilbert.pyx  lightcone.py  oct_handler.pyx  octree_converter.pyx  ramses2condinit.py  ramses_change_ncpu.py  read_logs.py  star_formation_history.py
astrophysics_toolset/ramses/tests/: test_hilbert.py
astrophysics_toolset/utilities/: custom_types.py  decorators.py  exceptions.py  field_operations.py  funcs.py  logging.py  periodicity.py  projections.py  sph.py  types.py
astrophysics_toolset/utilities/tests/: test_field_operations.py  test_funcs.py  test_periodicity.py  test_projections.py
astrophysics_toolset/visualization/: plotting.py
astrophysics_toolset/yt/: atomic_data.py  clump-finding.py  clump_finding.py  elements.py  emission_lines.py  extract_particles.py  gadget.py  halo_analysis.py  ir_lines_opt.py  nist-nuclide-data.txt  stars.py  utils.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: Measure dimensionality.py
tests/: __init__.py  test_astrophysics_toolset.py
