[metadata]
name = astrophysics_toolset
version = 0.2.4
description = Python package with some astrophysics-related stuff
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/cphyc/astrophysics_toolset
author = Corentin Cadiou
author_email = c.cadiou@ucl.ac.uk
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords = astrophysics_toolset

[options]
packages = find:
install_requires =
    cython-fortran-file>=0.2.2
    kaitaistruct>=0.8
    numba>=0.40
    numpy>=1.18,<1.22
    scipy>=1.4.1
    yt>=4.0
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    astrophysics_toolset=astrophysics_toolset.cli:main
    ramses_change_ncpu=astrophysics_toolset.ramses.ramses_change_ncpu:main
    yorick2hdf=astrophysics_toolset.io.yorick:main

[options.extras_require]
all =
    h5py>=3.0.0
    pyorick>=1.4
test =
    pytest~=6.2.5

[bumpversion]
current_version = 0.2.4
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:astrophysics_toolset/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
exclude = doc
ignore = E203, # Whitespace before ':' (black compatibility)
    E266, # Too many leading '#' for block comment
    E302, # Expected 2 blank lines, found 0
    E501, # Line too long (let Black deal with line-lenght)
    E741, # Do not use variables named 'I', 'O', or 'l'
    W503, # Line break occurred before a binary operator (black compatibility)
jobs = 8

[aliases]
test = pytest
